--- a/djangoProject/templates/manage.html
+++ b/djangoProject/templates/manage.html
@@ -17,7 +17,7 @@
 
                         {#项目管理#}
                         <li class="sidebar-item ">
-                            <a href="/project/">
+                            <a href="/project/1/">
                         <span data-toggle="collapse" class="sidebar-link collapsed" aria-expanded="false">
                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
                                  fill="none"
@@ -40,7 +40,7 @@
                         </li>
                         {# 模块管理#}
                         <li class="sidebar-item ">
-                            <a href="/module/">
+                            <a href="/module/2/">
                         <span data-toggle="collapse" class="sidebar-link collapsed" aria-expanded="false">
                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
                                  fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
