--- a/djangoProject/templates/projecrt/add.html
+++ b/djangoProject/templates/projecrt/add.html
@@ -8,7 +8,7 @@
             </div>
 
             <div style="margin-left: 20px;margin-right: 20px;width: 80%">
-                <form action="/project/add/" method="post">
+                <form action="/manage/project_add/" method="post">
                     <div class="form-selector__input">
                         {{ form }}<br>
                         {% csrf_token %}
