--- a/djangoProject/templates/manage.html
+++ b/djangoProject/templates/manage.html
@@ -17,7 +17,7 @@
 
                         {#项目管理#}
                         <li class="sidebar-item ">
-                            <a href="/project/1/">
+                            <a href="/manage/project_list/">
                         <span data-toggle="collapse" class="sidebar-link collapsed" aria-expanded="false">
                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
                                  fill="none"
@@ -40,7 +40,7 @@
                         </li>
                         {# 模块管理#}
                         <li class="sidebar-item ">
-                            <a href="/module/2/">
+                            <a href="/manage/module_list/">
                         <span data-toggle="collapse" class="sidebar-link collapsed" aria-expanded="false">
                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
                                  fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
@@ -114,71 +114,51 @@
                 </div>
             </div>
         </nav>
-        <div class="main">
-            <nav class="navbar navbar-expand navbar-light bg-white">
-            <span class="sidebar-toggle d-flex mr-2">
-                <i class="hamburger align-self-center"></i></span>
-                <form class="form-inline">
-                    <input placeholder="Search projects..." aria-label="Search" type="text"
-                           class="form-control-no-border mr-sm-2 form-control">
-                </form>
-                <div class="collapse navbar-collapse">
-                    <ul class="ml-auto navbar-nav">
-                        <li class="dropdown nav-item">
-                        <span class="d-inline-block d-sm-none">
-                            <a aria-haspopup="true" href="#" class="dropdown-toggle nav-link" aria-expanded="false">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
-                                     fill="none"
-                                     stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                     stroke-linejoin="round" class="align-middle">
-                                    <circle cx="12" cy="12" r="3"></circle>
-                                </svg>
-                            </a>
-                        </span>
-                            <span class="d-none d-sm-inline-block">
-                        <a aria-haspopup="true" href="#" class="dropdown-toggle nav-link" aria-expanded="false">
-                            <img src="/static/media/avatar.d7185574.jpg" class="avatar img-fluid rounded-circle mr-1"
-                                 alt="">
-                            <span class="text-dark">Chris Wood</span><a href="/logout/">退出</a>
+         <div class="main">
+        <nav class="navbar navbar-expand navbar-light bg-white">
+            <a class="sidebar-toggle d-flex mr-2">
+                <i class="hamburger align-self-center"></i>
+            </a>
 
+            <form class="form-inline d-none d-sm-inline-block">
+                <input class="form-control form-control-no-border mr-sm-2" type="text" placeholder="Search projects..."
+                       aria-label="Search">
+            </form>
+
+            <div class="navbar-collapse collapse">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-icon dropdown-toggle d-inline-block d-sm-none" href="#" data-toggle="dropdown">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                 stroke-linejoin="round" class="feather feather-settings align-middle">
+                                <circle cx="12" cy="12" r="3"></circle>
+                                <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path>
+                            </svg>
                         </a>
-                    </span>
-                            <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu dropdown-menu-right">
-                                <button type="button" tabindex="0" role="menuitem" class="dropdown-item">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
-                                         fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                         stroke-linejoin="round" class="align-middle mr-2">
-                                        <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
-                                        <circle cx="12" cy="7" r="4"></circle>
-                                    </svg>
-                                    Profile
-                                </button>
-                                <button type="button" tabindex="0" role="menuitem" class="dropdown-item">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
-                                         fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                         stroke-linejoin="round" class="align-middle mr-2">
-                                        <path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path>
-                                        <path d="M22 12A10 10 0 0 0 12 2v10z"></path>
-                                    </svg>
-                                    Analytics
-                                </button>
-                                <div tabindex="-1" class="dropdown-divider"></div>
-                                <button type="button" tabindex="0" role="menuitem" class="dropdown-item">Settings &amp;
-                                    Privacy
-                                </button>
-                                <button type="button" tabindex="0" role="menuitem" class="dropdown-item">Help</button>
-                                <button type="button" tabindex="0" role="menuitem" class="dropdown-item">Sign out
-                                </button>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
 
-            {% block manage %}
+                        <a class="nav-link d-none d-sm-inline-block" href="#" data-toggle="dropdown">
+                            <img src="/static/img/user.svg" class="avatar img-fluid rounded-circle mr-1"
+                                 alt="Chris Wood">
 
-            {% endblock %}
-        </div>
+                            <span class="text-dark">{{ user }}</span>
+                            <a href="/logout/">退出</a>
+                        </a>
+
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+        <main class="content">
+            <div class="container-fluid p-0">
+                {% block manage %}
+
+                {% endblock %}
+            </div>
+        </main>
+
+    </div>
 
     </div>
 
