--- a/djangoProject/templates/manage.html
+++ b/djangoProject/templates/manage.html
@@ -55,7 +55,7 @@
                         </li>
                         {#                    用例管理#}
                         <li class="sidebar-item ">
-                            <a href="/manage/module">
+                            <a href="/case/">
                         <span data-toggle="collapse" class="sidebar-link collapsed" aria-expanded="false">
                         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
                              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
