--- a/djangoProject/templates/base.html
+++ b/djangoProject/templates/base.html
@@ -8,11 +8,14 @@
     <link rel="stylesheet" href="{% static "css/theme.css" %}">
     <link rel="shortcut icon" href="{% static "img/ejc.ico" %}">
     <link rel="stylesheet" href="{% static "css/corporate.css" %}">
+    <script crossorigin="anonymous"
+            integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+            src="https://lib.baomitu.com/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
 {% block base %}
-{#    所有的HTML页面都继承这个页面#}
+    {#    所有的HTML页面都继承这个页面#}
 {% endblock %}
 </body>
 </html>
