--- a/djangoProject/templates/manage.html
+++ b/djangoProject/templates/manage.html
@@ -4,7 +4,7 @@
         <nav class="sidebar">
             <div class="sidebar-content">
                 <div class="scrollbar-container ps">
-                    <a class="sidebar-brand" href="/">
+                    <a class="sidebar-brand" href="/manage/">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                              class="align-middle text-primary">
